# HW1_Q3.2

./: CMakeLists.txt  chessSystem.c  chessSystem.h  game.c  game.h  main.c  map.c  mapUtil.c  mapUtil.h  my_main.c  player.c  player.h  playerInTournament.c  playerInTournament.h  public_main.c  tournament.c  tournament.h
mtm_map/: map.c
output/actual/: basic2.txt  basic3.txt  levels2.txt  levels3.txt  tournaments3.txt  tournaments5.txt  tournaments7.txt
output/expected/: basic4.txt  levels4.txt  levels6.txt  levels7.txt  tournaments2.txt  tournaments6.txt
tests/LastYear/: map_tests.c
tests/maaroof/: read_me_please.txt
tests/maaroof/MAGIC_TESTING_FOLDER/: chessSystemTestsExample.c  chessSystemTestsExample_nonServer.c
tests/maaroof/MAGIC_TESTING_FOLDER/expected_output/: add_same_game_after_remove.txt  player_levels_all.txt  test_tournament_remove_expected_output.txt
tests/test1/tests/: main.c
tests/test2/: chessSystemTestsExample.c
tests/test2/my_output/: player_levels_your_output.txt  player_levels_your_output1.txt  player_levels_your_output10.txt  player_levels_your_output2.txt  player_levels_your_output4.txt  tournament_statistics_your_output10.txt  tournament_statistics_your_output2.txt  tournament_statistics_your_output3.txt  tournament_statistics_your_output4.txt
tests/test2/your_output/: player_levels_your_output4.txt  tournament_statistics_your_output3.txt  tournament_statistics_your_output4.txt
your_output/: player_levels_your_output2.txt  tournament_statistics_your_output1.txt  tournament_statistics_your_output10.txt
